[New Website] Team Card  (#958)
### Summary <!-- Required -->
Implemented the team card component, along with the member details
component. Added components on test page.

### Notion/Figma Link <!-- Optional -->

[Figma](https://www.figma.com/design/ttAGEX3pHmzuhMzp8uAyhz/SP25-Cornelldti.org-Website-Revamp?node-id=1336-13034&m=dev)

### Test Plan <!-- Required -->


https://github.com/user-attachments/assets/424c87c5-7532-40de-8e26-bb79f9cc2d32

---------

Co-authored-by: Clément <clementproze@gmail.com>

--- a/new-dti-website-redesign/src/app/globals.css
+++ b/new-dti-website-redesign/src/app/globals.css
@@ -192,6 +192,7 @@ section:not(.hero):not(.ctaSection),
   margin: auto;
 }
 
+a:focus-visible,
 .focusState:focus-visible {
   outline: 2px solid var(--foreground-1);
   outline-offset: 3px;
