--- a/new-dti-website-redesign/src/app/globals.css
+++ b/new-dti-website-redesign/src/app/globals.css
@@ -281,6 +281,27 @@ article:not(:last-child) {
   border-right: 1px solid var(--border-1);
 }
 
+article .linkCard::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: inherit;
+  cursor: pointer;
+}
+
+article .linkCard:focus-visible {
+  outline: none;
+}
+
+article .linkCard:focus-visible::after {
+  outline: 2px solid var(--foreground-1);
+  outline-offset: 3px;
+  border-radius: 4px;
+}
+
 @media only screen and (max-width: 1184px) {
   section:not(.hero):not(.ctaSection):not(.pageSection):not(.pageLayout),
   .sectionSep,
