--- a/new-dti-website-redesign/src/app/globals.css
+++ b/new-dti-website-redesign/src/app/globals.css
@@ -1,4 +1,7 @@
 @import 'tailwindcss';
+@source inline("border-accent-{red,pink,green,yellow,blue,purple}");
+@source inline("fill-accent-{red,pink,green,yellow,blue,purple}");
+@source inline("text-accent-{red,pink,green,yellow,blue,purple}");
 
 :root {
   /* BACKGROUND */
