update candidate decider to 6 options and fix candidate indexing

--- a/frontend/src/components/Common/Selector/Selector.module.css
+++ b/frontend/src/components/Common/Selector/Selector.module.css
@@ -41,10 +41,17 @@
 }
 
 .yellow {
-  color: var(--accent-maybe);
+  color: var(--accent-lean-no);
 }
 .yellowSelected {
-  background: var(--accent-maybe);
+  background: var(--accent-lean-no);
+}
+
+.lightgreen {
+  color: var(--accent-lean-yes)
+}
+.lightgreenSelected {
+  background: var(--accent-lean-yes)
 }
 
 .green {
