--- a/frontend/src/pages/App.css
+++ b/frontend/src/pages/App.css
@@ -18,7 +18,7 @@
   --accent-lean-no: #ff9300;
   --accent-lean-yes: #7eb133;
   --accent-yes: #28a948;
-  --accent-strong-yes: #0a6e29;
+  --accent-strong-yes: #008080;
 }
 
 * {
