--- a/frontend/src/components/Common/Selector/Selector.module.css
+++ b/frontend/src/components/Common/Selector/Selector.module.css
@@ -61,10 +61,10 @@
   background: var(--accent-yes);
 }
 
-.darkgreen {
+.teal {
   color: var(--accent-strong-yes);
 }
-.darkgreenSelected {
+.tealSelected {
   background: var(--accent-strong-yes);
 }
 
