--- a/frontend/src/components/Common/Selector/Selector.module.css
+++ b/frontend/src/components/Common/Selector/Selector.module.css
@@ -48,10 +48,10 @@
 }
 
 .lightgreen {
-  color: var(--accent-lean-yes)
+  color: var(--accent-lean-yes);
 }
 .lightgreenSelected {
-  background: var(--accent-lean-yes)
+  background: var(--accent-lean-yes);
 }
 
 .green {
