--- a/frontend/src/components/Alumni/Alumni.module.css
+++ b/frontend/src/components/Alumni/Alumni.module.css
@@ -156,6 +156,14 @@
   min-width: 0;
 }
 
+.mapContainer {
+  width: 100%;
+  height: 450px;
+  border: 1px solid #e4e4e4;
+  border-radius: 4px;
+  overflow: hidden;
+}
+
 .resultCount {
   font-size: 12px;
   color: #3d3d3d;
