--- a/frontend/src/components/Interview-Scheduler/InterviewScheduler.module.css
+++ b/frontend/src/components/Interview-Scheduler/InterviewScheduler.module.css
@@ -1,5 +1,6 @@
 .schedulerContainer {
   padding: 2%;
+  height: 100vh;
 }
 
 .contentContainer {
@@ -9,7 +10,7 @@
 
 .sidebarContainer {
   width: 40%;
-  padding-top: 7em;
+  padding-top: 4em;
 }
 
 .inviteCardContainer {
@@ -27,3 +28,4 @@
   display: flex;
   justify-content: space-between;
 }
+
