--- a/frontend/src/components/Alumni/Alumni.module.css
+++ b/frontend/src/components/Alumni/Alumni.module.css
@@ -164,6 +164,17 @@
   overflow: hidden;
 }
 
+.leafletMap {
+  width: 100%;
+  height: 100%;
+}
+
+.popupContent {
+  text-align: center;
+  font-size: 12px;
+  color: #3d3d3d;
+}
+
 .resultCount {
   font-size: 12px;
   color: #3d3d3d;
